--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
     "sharp": "^0.31.1"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^2.13.1",
+    "@graphql-codegen/cli": "^2.16.5",
     "@graphql-codegen/introspection": "2.2.1",
-    "@graphql-codegen/typescript": "2.7.3",
-    "@graphql-codegen/typescript-operations": "2.5.3",
-    "@graphql-codegen/typescript-react-apollo": "3.3.3",
-    "@graphql-codegen/typescript-resolvers": "2.7.3",
+    "@graphql-codegen/typescript": "^2.7.3",
+    "@graphql-codegen/typescript-operations": "^2.5.3",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.3",
+    "@graphql-codegen/typescript-resolvers": "^2.7.3",
     "@svgr/webpack": "^6.3.1",
     "@types/cors": "^2.8.12",
     "@types/lodash": "^4.14.186",
